# capp8

./: Cargo.toml  license  readme.md
backend/src/: cpu.rs  display.rs  emulator.rs  instruction.rs  lib.rs
capp8_app/: Cargo.toml
capp8_app/examples/: chip8_logo.rs  corax.rs  flags.rs  ibm.rs  keypad.rs
capp8_app/src/: main.rs
capp8_core/: Cargo.toml
capp8_core/examples/: chip8_logo.rs  corax.rs  flags.rs  ibm.rs
capp8_core/src/: display.rs  emulator.rs  fonts.rs  frontend.rs  instruction.rs  lib.rs  opcode.rs
capp8_desktop/: Cargo.toml
capp8_desktop/src/: gui.rs
capp8_gui/: Cargo.toml
